@@ -1,5 +1,3 @@
-// $Id: README.txt,v 1.14 2010/03/22 19:19:36 johnalbin Exp $
-
 ADDING MENU BLOCKS
 ------------------
 
@@ -36,9 +34,8 @@ Administrative title
   unique title to be used on that page. If blank, the regular title will be
   used.
 
-Parent item
-  First select the menu. Then select the parent item from that menu. The tree of
-  links will only contain children of the selected parent item.
+Menu name
+  Select the menu to use for the tree of links.
 
 Starting level
   Blocks that start with the 1st level will always be visible. Blocks that start
@@ -62,6 +59,11 @@ Sort
   Sort each item in the active trail to the top of its level. When used on a
   deep or wide menu tree, the active menu item's children will be easier to see
   when the page is reloaded.
+
+Fixed parent item
+  If you select a specific menu item, you alter the "starting level" and
+  "maximum depth" options to be relative to the fixed parent item. The tree of
+  links will only contain children of the selected parent item.
 
 
 STYLING MENU BLOCKS
@@ -119,7 +121,7 @@ called by it.
   - [theme]_menu_item_link__menu_block__[block id number]()
 
 For example, if you created a garland_menu_tree__menu_block() function, it would
-override theme_menu_block() any time it was used by this module, but not when
+override theme_menu_tree() any time it was used by this module, but not when
 used by any other module. Similarly, a garland_menu_item__menu_block__1()
 function would override theme_menu_item(), but only for the first menu block in
 your system (the menu block with an ID of 1).
@@ -132,5 +134,6 @@ Developers can use the API of this module to create their own menu trees outside
 the confines of blocks. All of the publicly available API functions are
 documented in the menu_block.module file.
 
-In addition, Menu block implements HOOK_get_menus() and
-HOOK_menu_block_tree_alter(). See menu_block.api.php for documentation.
+In addition, Menu block implements HOOK_menu_block_get_menus(),
+HOOK_menu_block_get_sort_menus() and HOOK_menu_block_tree_alter(). See
+menu_block.api.php for documentation.
