@@ -1,5 +1,3 @@
-/* $Id: menu-block-admin.css,v 1.5 2010/03/22 19:58:31 johnalbin Exp $ */
-
 #edit-admin-title-wrapper,
 #edit-parent-wrapper,
 #edit-depth-wrapper {
