@@ -1,6 +1,4 @@
 <?php
-// $Id: menu_block.admin.inc,v 1.40.2.4 2010/03/24 19:44:00 johnalbin Exp $
-
 /**
  * @file
  * Provides infrequently used functions for menu_block.
@@ -193,55 +191,21 @@ function menu_block_configure_form(&$form_state) {
   // Merge in the default configuration.
   $config += menu_block_get_config();
 
-  // Get the list of menus.
-  $menus = menu_block_get_all_menus();
-
-  // Build the standard and jquery versions of the parent item options.
-  $parent_options = $parent_options_js = array();
-  foreach ($menus AS $menu_name => $title) {
-    if ($menu_name == MENU_TREE__CURRENT_PAGE_MENU) {
-      $options = array($menu_name . ':0' => $title);
-      $parent_options += $options;
-      // For the js options, replace the root item option with better help text.
-      $options[$menu_name . ':0'] = '<' . t('root of menu') . '>';
-    }
-    else {
-      // Retrieve the entire tree of each menu.
-      $options = menu_parent_options(array($menu_name => $title), array('mlid' => 0));
-      $parent_options += $options;
-      $options[$menu_name . ':0'] = '<' . t('root of @menu_name', array('@menu_name' => $title)) . '>';
-    }
-    // Render the options as <option> elements.
-    $parent_options_js[$menu_name] = form_select_options(array('#value' => NULL), $options);
+  // Don't display the config form if this delta is exported to code.
+  if (!empty($config['exported_to_code'])) {
+    $form['exported_message'] = array(
+      '#markup' => '<p><em>' . t('Configuration is being provided by code.') . '</em></p>',
+    );
+    return $form;
   }
-  // Build a select element that is only needed for the jquery version.
-  $menus_select = theme('select', array(
-    '#title' => t('Menu'),
-    '#value' => $config['menu_name'],
-    '#options' => $menus,
-    '#name' => 'parent_menu',
-    '#id' => 'edit-parent-menu',
-    '#attributes' => array('class' => 'menu-block-parent-menu'),
-    '#size' => 1,
-    '#required' => FALSE,
-    '#multiple' => FALSE,
-    '#parents' => array('parent_menu'),
-  ));
-  // Load the javascript data.
-  $settings = array(
-    'menu_block' => array(
-      'menus' => $menus_select . '<label id="item-label">' . t('Item') . ':</label>',
-      'menus_default' => $config['menu_name'],
-      'parent_options' => $parent_options_js,
-      'parent_default' => $config['menu_name'] . ':' . $config['parent_mlid'],
-    ),
-  );
-  drupal_add_js($settings, 'setting');
-  drupal_add_js(drupal_get_path('module', 'menu_block') . '/menu-block.js');
 
   // Build the standard form.
-  $form['menu-block-wrapper-start'] = array('#value' => '<div id="menu-block-settings" class="menu-block-configure-form">');
+  drupal_add_js(drupal_get_path('module', 'menu_block') . '/menu-block.js');
   drupal_add_css(drupal_get_path('module', 'menu_block') . '/menu-block-admin.css');
+
+  $form['menu-block-wrapper-start'] = array(
+    '#value' => '<div id="menu-block-settings" class="menu-block-configure-form">',
+  );
   $form['title_link'] = array(
     '#prefix' => '<div class="menu-block-title-link">',
     '#type' => 'checkbox',
@@ -256,14 +220,14 @@ function menu_block_configure_form(&$form_state) {
     '#title' => t('Administrative title'),
     '#description' => t('This title will be used administratively to identify this block. If blank, the regular title will be used.'),
   );
-  $form['parent'] = array(
+  $menus = menu_block_get_all_menus();
+  $form['menu_name'] = array(
     '#type' => 'select',
-    '#title' => t('Parent item'),
-    '#default_value' => $config['menu_name'] . ':' . $config['parent_mlid'],
-    '#options' => $parent_options,
-    '#description' => t('The tree of links will only contain children of the selected parent item. Using <em>&lt;the menu selected by the page&gt;</em> can be customized on the <a href="!url">Menu block settings page</a>.', array('!url' => url('admin/settings/menu_block'))),
-    '#attributes' => array('class' => 'menu-block-parent'),
-    '#element_validate' => array('menu_block_configure_form_parent_validate'),
+    '#title' => t('Menu'),
+    '#default_value' => $config['menu_name'],
+    '#options' => $menus,
+    '#description' => t('The preferred menus used by <em>&lt;the menu selected by the page&gt;</em> can be customized on the <a href="!url">Menu block settings page</a>.', array('!url' => url('admin/settings/menu_block'))),
+    '#attributes' => array('class' => 'menu-block-menu-name'),
   );
   $form['level'] = array(
     '#type' => 'select',
@@ -340,6 +304,16 @@ function menu_block_configure_form(&$form_state) {
     '#default_value' => $config['sort'],
     '#description' => t('Sort each item in the active trail to the top of its level. When used on a deep or wide menu tree, the active menu item’s children will be easier to see when the page is reloaded.'),
   );
+  $form['parent_mlid'] = array(
+    '#type' => 'select',
+    '#title' => t('Fixed parent item'),
+    '#default_value' => $config['menu_name'] . ':' . $config['parent_mlid'],
+    '#options' => menu_parent_options($menus, array('mlid' => 0)),
+    '#description' => t('Alter the “starting level” and “maximum depth” options to be relative to the fixed parent item. The tree of links will only contain children of the selected menu item.'),
+    '#attributes' => array('class' => 'menu-block-parent-mlid'),
+    '#element_validate' => array('menu_block_configure_form_parent_validate'),
+  );
+  $form['parent_mlid']['#options'][MENU_TREE__CURRENT_PAGE_MENU . ':0'] = '<' . t('the menu selected by the page') . '>';
   $form['menu-block-wrapper-close'] = array('#value' => '</div>');
 
   return $form;
@@ -349,9 +323,19 @@ function menu_block_configure_form(&$form_state) {
  * Validates the parent element of the block configuration form.
  */
 function menu_block_configure_form_parent_validate($element, &$form_state) {
-  // The "Menu block" config has the "parent" value split into "menu_name" and
-  // "parent_mlid" values. The value of "parent" stored in the database/config array is either FALSE
-  list($form_state['values']['menu_name'], $form_state['values']['parent_mlid']) = explode(':', $form_state['values']['parent']);
+  // Determine the fixed parent item's menu and mlid.
+  list($menu_name, $parent_mlid) = explode(':', $form_state['values']['parent_mlid']);
+  if ($parent_mlid) {
+    // If mlid is set, its menu overrides the menu_name option.
+    $form_state['values']['menu_name'] = $menu_name;
+  }
+  else {
+    // Otherwise the menu_name overrides the parent item option.
+    $form_state['values']['parent_mlid'] = $menu_name . ':0';
+  }
+  // The value of "parent" stored in the database/config array is the menu name
+  // combined with the optional parent menu item's mlid.
+  $form_state['values']['parent'] = $form_state['values']['parent_mlid'];
 }
 
 /**
@@ -386,13 +370,24 @@ function _menu_block_block_save($delta, $edit) {
  *   The settings form used by Menu block.
  */
 function menu_block_admin_settings_form($form_state) {
-  // Grab all the menus.
-  $menus = menu_block_get_all_menus();
-  unset($menus[MENU_TREE__CURRENT_PAGE_MENU]);
-  $total_menus = count($menus);
+  // Retrieve core's menus.
+  $menus = menu_get_menus();
+  // Include book support.
+  if (module_exists('book')) {
+    module_load_include('inc', 'menu_block', 'menu_block.book');
+  }
+  // Retrieve all the menu names provided by hook_menu_block_get_sort_menus().
+  $menus = array_merge($menus, module_invoke_all('menu_block_get_sort_menus'));
+  asort($menus);
 
   // Load stored configuration.
   $menu_order = variable_get('menu_block_menu_order', array('primary-links' => '', 'secondary-links' => ''));
+  // Remove any menus no longer in the list of all menus.
+  foreach (array_keys($menu_order) as $menu) {
+    if (!isset($menus[$menu])) {
+      unset($menu_order[$menu]);
+    }
+  }
 
   // Merge the saved configuration with any un-configured menus.
   $all_menus = $menu_order + $menus;
@@ -408,6 +403,7 @@ function menu_block_admin_settings_form($form_state) {
   );
 
   $order = 0;
+  $total_menus = count($all_menus);
   foreach (array_keys($all_menus) as $menu_name) {
     $form['menu_order'][$menu_name] = array(
       'title' => array(
