@@ -1,6 +1,4 @@
 <?php
-// $Id: menu_block.follow.inc,v 1.4 2010/03/22 14:11:27 johnalbin Exp $
-
 /**
  * @file
  * Provides active menu item pruning.
