@@ -1,5 +1,3 @@
-; $Id: menu_block.info,v 1.7 2010/03/17 07:27:33 johnalbin Exp $
-
 name = "Menu Block"
 description = "Provides configurable blocks of menu items."
 
@@ -7,9 +5,9 @@ core = 6.x
 dependencies[] = block
 dependencies[] = menu
 
-; Information added by drupal.org packaging script on 2010-03-24
-version = "6.x-2.3"
+; Information added by drupal.org packaging script on January 1, 1970 - 00:00
+version = "6.x-2.4"
 core = "6.x"
 project = "menu_block"
-datestamp = "1269474612"
+datestamp = "1297370223"
 
