@@ -1,6 +1,4 @@
 <?php
-// $Id: menu_block.module,v 1.69.2.1 2010/03/24 12:13:01 johnalbin Exp $
-
 /**
  * @file
  * Provides configurable blocks of menu items.
@@ -128,16 +126,23 @@ function menu_block_get_all_menus() {
   static $all_menus;
 
   if (!$all_menus) {
-    // Include book support.
-    if (module_exists('book')) {
-      module_load_include('inc', 'menu_block', 'menu_block.book');
+    if ($cached = cache_get('menu_block_menus', 'cache_menu')) {
+      $all_menus = $cached->data;
     }
-    // We're generalizing menu's menu_get_menus() by making it into a hook.
-    // Retrieve all the menu names provided by hook_get_menus().
-    $all_menus = module_invoke_all('get_menus');
-    // Add an option to use the menu for the active menu item.
-    $all_menus[MENU_TREE__CURRENT_PAGE_MENU] = '<' . t('the menu selected by the page') . '>';
-    asort($all_menus);
+    else {
+      // Retrieve core's menus.
+      $all_menus = menu_get_menus();
+      // Include book support.
+      if (module_exists('book')) {
+        module_load_include('inc', 'menu_block', 'menu_block.book');
+      }
+      // Retrieve all the menu names provided by hook_menu_block_get_menus().
+      $all_menus = array_merge($all_menus, module_invoke_all('menu_block_get_menus'));
+      // Add an option to use the menu for the active menu item.
+      $all_menus[MENU_TREE__CURRENT_PAGE_MENU] = '<' . t('the menu selected by the page') . '>';
+      asort($all_menus);
+      cache_set('menu_block_menus', $all_menus, 'cache_menu');
+    }
   }
   return $all_menus;
 }
@@ -240,6 +245,14 @@ function menu_tree_build($config) {
     // Retrieve the list of available menus.
     $menu_order = variable_get('menu_block_menu_order', array('primary-links' => '', 'secondary-links' => ''));
 
+    // Check for regular expressions as menu keys.
+    $patterns = array();
+    foreach (array_keys($menu_order) as $pattern) {
+      if ($pattern[0] == '/') {
+        $patterns[$pattern] = NULL;
+      }
+    }
+
     // Retrieve all the menus containing a link to the current page.
     $result = db_query("SELECT menu_name FROM {menu_links} WHERE link_path = '%s'", $_GET['q'] ? $_GET['q'] : '<front>');
     while ($item = db_fetch_array($result)) {
@@ -248,9 +261,24 @@ function menu_tree_build($config) {
         // Mark the menu.
         $menu_order[$item['menu_name']] = MENU_TREE__CURRENT_PAGE_MENU;
       }
+      else {
+        // Check if the menu matches one of the available patterns.
+        foreach (array_keys($patterns) as $pattern) {
+          if (preg_match($pattern, $item['menu_name'])) {
+            // Mark the menu.
+            $menu_order[$pattern] = MENU_TREE__CURRENT_PAGE_MENU;
+            // Store the actual menu name.
+            $patterns[$pattern] = $item['menu_name'];
+          }
+        }
+      }
     }
     // Find the first marked menu.
     $config['menu_name'] = array_search(MENU_TREE__CURRENT_PAGE_MENU, $menu_order);
+    // If a pattern was matched, use the actual menu name instead of the pattern.
+    if (!empty($patterns[$config['menu_name']])) {
+      $config['menu_name'] = $patterns[$config['menu_name']];
+    }
     $config['parent_mlid'] = 0;
 
     // If no menu link was found, don't display the block.
@@ -322,7 +350,7 @@ function menu_tree_build($config) {
   $data['content'] = menu_block_tree_output($tree, $config);
   if ($data['content']) {
     $hooks = array();
-    $hooks[] = 'menu_block_wrapper__' . $config['delta'];
+    $hooks[] = 'menu_block_wrapper__' . str_replace('-', '_', $config['delta']);
     $hooks[] = 'menu_block_wrapper__' . str_replace('-', '_', $config['menu_name']);
     $hooks[] = 'menu_block_wrapper';
     $data['content'] = theme($hooks, $data['content'], $config, $config['delta']);
@@ -359,7 +387,7 @@ function menu_block_get_title($render_title_as_link = TRUE, $config = array()) {
     }
     $hooks = array();
     if (!empty($config['delta'])) {
-      $hooks[] = 'menu_item_link__menu_block__' . $config['delta'];
+      $hooks[] = 'menu_item_link__menu_block__' . str_replace('-', '_', $config['delta']);
     }
     $hooks[] = 'menu_item_link__menu_block__' . str_replace('-', '_', $menu_item['menu_name']);
     $hooks[] = 'menu_item_link__menu_block';
@@ -593,7 +621,7 @@ function menu_block_tree_output(&$tree, $config = array()) {
     $menu_item = current($tree);
     $config['menu_name'] = $menu_item['link']['menu_name'];
   }
-  $hook_delta = $config['delta'];
+  $hook_delta = str_replace('-', '_', $config['delta']);
   $hook_menu_name = str_replace('-', '_', $config['menu_name']);
 
   // Pull out just the menu items we are going to render so that we
