@@ -1,4 +1,11 @@
-// $Id: CHANGELOG.txt,v 1.48.2.1 2010/03/24 23:39:55 johnalbin Exp $
+Menu Block 6.x-2.4, 2011-02-11
+------------------------------
+- #1050766: Improve usability of "Parent item" UI
+- #825132: Performance problem on sites with many books
+- #945714 by pedrochristopher: theme override misidentified in README
+- #593126: hook_get_menus() causes conflicts with Menu Access, og_menu, etc
+- #825132: Add hook_menu_block_get_sort_menus() for improved performance and UX of book integration
+- Fix theme hook suggestions for non-numeric block deltas
 
 Menu Block 6.x-2.3, 2010-03-24
 ------------------------------
